url-shortener-app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              number: 80
  - http:
      paths:
      - path: /shorten
        pathType: Prefix
        backend:
          service:
            name: backend
            port:
              number: 80
  - http:
      paths:
      - path: /[A-Za-z0-9_-]{6}$
        pathType: ImplementationSpecific
        backend:
          service:
            name: backend
            port:
              number: 80
